add plugin tit edu

--- a/videoplugin/src/main/res/layout/page_video_plugin.xml
+++ b/videoplugin/src/main/res/layout/page_video_plugin.xml
@@ -7,10 +7,16 @@
     tools:parentTag="com.salton123.videoplugin.VideoPluginMainPage"
     >
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/recyclerView"
+    <com.andview.refreshview.XRefreshView
+        android:id="@+id/xRefreshView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        />
+        >
 
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/recyclerView"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            />
+    </com.andview.refreshview.XRefreshView>
 </merge>
