add plugin tit edu

--- a/baselib/src/main/res/values/colors-base.xml
+++ b/baselib/src/main/res/values/colors-base.xml
@@ -5,4 +5,5 @@
     <color name="colorAccent">#FF4081</color>
     <color name="default_background">#efeff4</color>
     <color name="tab_unselect">#c9c9c9</color>
+    <color name="ching">#3cd0a1</color>
 </resources>
