--- a/pluginxmly/xmly/src/main/res/layout/xmly_cp_main.xml
+++ b/pluginxmly/xmly/src/main/res/layout/xmly_cp_main.xml
@@ -1,18 +1,45 @@
-<?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<com.sothree.slidinguppanel.SlidingUpPanelLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:sothree="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/sliding_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:background="?attr/colorPrimary"
+    android:fitsSystemWindows="false"
+    android:gravity="bottom"
+    sothree:umanoDragView="@+id/dragView"
+    sothree:umanoOverlay="true"
+    sothree:umanoPanelHeight="56dp"
+    sothree:umanoScrollableView="@+id/list"
+    >
 
+    <!-- MAIN CONTENT -->
     <FrameLayout
-        android:id="@+id/flBanner"
-        android:layout_width="match_parent"
-        android:layout_height="180dp"></FrameLayout>
-
-    <FrameLayout
-        android:id="@+id/flRecommend"
+        android:id="@+id/fl_main_content"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="180dp"
-        />
-</FrameLayout>
+        android:orientation="vertical">
+
+    </FrameLayout>
+    <!-- SLIDING LAYOUT -->
+
+    <FrameLayout
+        android:id="@+id/dragView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:clickable="true"
+        android:focusable="false"
+        android:orientation="vertical">
+
+        <FrameLayout
+            android:id="@+id/music_player_container"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+
+        <FrameLayout
+            android:id="@+id/mini_player_container"
+            android:layout_width="match_parent"
+            android:layout_height="56dp"
+            android:background="#ffffff" />
+    </FrameLayout>
+</com.sothree.slidinguppanel.SlidingUpPanelLayout>
