--- a/pluginxmly/xmly/src/main/res/layout/xmly_item_play_type_banner.xml
+++ b/pluginxmly/xmly/src/main/res/layout/xmly_item_play_type_banner.xml
@@ -2,15 +2,15 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_width="wrap_content"
+    android:layout_height="200dp"
     tools:parentTag="android.widget.LinearLayout"
     >
 
     <cn.bingoogolapple.bgabanner.BGABanner
         android:id="@+id/banner"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_width="wrap_content"
+        android:layout_height="200dp"
         app:banner_pageChangeDuration="3000"
         app:banner_pointAutoPlayAble="true"
         app:banner_pointContainerBackground="@android:color/transparent"
