--- a/pluginxmly/xmly/src/main/res/layout/xmly_cp_music_player.xml
+++ b/pluginxmly/xmly/src/main/res/layout/xmly_cp_music_player.xml
@@ -17,7 +17,7 @@
         >
 
         <com.salton123.xmly.view.widget.ShadowImageView
-            android:id="@+id/image_view_album"
+            android:id="@+id/ivCover"
             android:layout_width="@dimen/mp.music.album.size"
             android:layout_height="@dimen/mp.music.album.size"
             android:layout_centerInParent="true"
@@ -26,25 +26,29 @@
     </RelativeLayout>
 
     <TextView
-        android:id="@+id/text_view_name"
+        android:id="@+id/tvTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="@dimen/mp.margin.normal"
         android:layout_marginLeft="@dimen/mp.margin.xlarge"
         android:layout_marginRight="@dimen/mp.margin.xlarge"
+        android:ems="15"
         android:gravity="center"
+        android:lines="1"
         android:textColor="?attr/colorAccent"
         android:textSize="18sp"
         tools:text="Drag me down"
         />
 
     <TextView
-        android:id="@+id/text_view_artist"
+        android:id="@+id/tvDesc"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="@dimen/mp.margin.xlarge"
         android:layout_marginRight="@dimen/mp.margin.xlarge"
+        android:ems="20"
         android:gravity="center"
+        android:lines="3"
         android:textColor="?attr/colorAccent"
         android:textSize="14sp"
         tools:text="One Direction"
@@ -97,7 +101,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="@dimen/mp.music.playControls.marginBottom"
         android:layout_marginTop="@dimen/mp.music.playControls.marginTop"
-        android:divider="@drawable/common_divider_xlarge_horizontal"
+        android:divider="@drawable/xmly_common_divider_xlarge_horizontal"
         android:gravity="center_vertical"
         android:showDividers="middle"
         >
@@ -107,7 +111,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="?attr/selectableItemBackgroundBorderless"
-            app:srcCompat="@drawable/ic_play_mode_shuffle"
+            app:srcCompat="@drawable/xmly_ic_play_mode_shuffle"
             />
 
         <android.support.v7.widget.AppCompatImageView
@@ -115,15 +119,15 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="?attr/selectableItemBackgroundBorderless"
-            app:srcCompat="@drawable/ic_play_last"
+            app:srcCompat="@drawable/xmly_ic_play_last"
             />
 
         <android.support.v7.widget.AppCompatImageView
-            android:id="@+id/button_play_toggle"
+            android:id="@+id/ivPlayPauseButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="?attr/selectableItemBackgroundBorderless"
-            app:srcCompat="@drawable/ic_play"
+            app:srcCompat="@drawable/xmly_ic_play"
             />
 
         <android.support.v7.widget.AppCompatImageView
@@ -131,7 +135,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="?attr/selectableItemBackgroundBorderless"
-            app:srcCompat="@drawable/ic_play_next"
+            app:srcCompat="@drawable/xmly_ic_play_next"
             />
 
         <android.support.v7.widget.AppCompatImageView
@@ -140,7 +144,7 @@
             android:layout_height="wrap_content"
             android:background="?attr/selectableItemBackgroundBorderless"
             android:scaleType="center"
-            app:srcCompat="@drawable/ic_favorite_no"
+            app:srcCompat="@drawable/xmly_ic_favorite_no"
             />
     </LinearLayout>
 </LinearLayout>
