--- a/pluginxmly/xmly/src/main/res/layout/xmly_cp_recommend.xml
+++ b/pluginxmly/xmly/src/main/res/layout/xmly_cp_recommend.xml
@@ -4,18 +4,25 @@
     android:id="@+id/multipleStatusView"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_marginBottom="@dimen/xmly_mini_player_height"
     android:background="#ffffff"
     app:emptyView="@layout/xmly_layout_empty_view"
     app:errorView="@layout/xmly_layout_error_view"
     app:loadingView="@layout/xmly_layout_loading_view"
     app:noNetworkView="@layout/xmly_layout_network_view">
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/mRecyclerView"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:clipToPadding="false"
-        android:paddingBottom="51dp">
 
-    </android.support.v7.widget.RecyclerView>
+    <com.andview.refreshview.XRefreshView
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/refreshLayout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/mRecyclerView"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            />
+    </com.andview.refreshview.XRefreshView>
+
 </com.classic.common.MultipleStatusView>
