--- a/pluginrecord/record/src/main/res/layout/record_main_comp.xml
+++ b/pluginrecord/record/src/main/res/layout/record_main_comp.xml
@@ -12,14 +12,10 @@
         android:layout_height="match_parent"
         >
 
-        <TextView
-            android:id="@+id/tvData"
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/recyclerView"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:gravity="center"
-            android:maxEms="15"
-            android:text="hello"
-            />
+            android:layout_height="match_parent" />
     </FrameLayout>
 
     <com.qmuiteam.qmui.widget.QMUIEmptyView
@@ -38,10 +34,10 @@
         android:layout_height="wrap_content"
         android:layout_gravity="right|bottom"
         android:layout_margin="20dp"
-        android:paddingBottom="16dp"
         android:paddingLeft="16dp"
-        android:paddingRight="16dp"
         android:paddingTop="16dp"
+        android:paddingRight="16dp"
+        android:paddingBottom="16dp"
         android:text="开始录制"
         app:qmui_isRadiusAdjustBounds="true"
         />
