--- a/pluginPhotoCompression/app/src/main/res/layout/view_video_component.xml
+++ b/pluginPhotoCompression/app/src/main/res/layout/view_video_component.xml
@@ -4,10 +4,10 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <fragment
-        android:id="@+id/videoFragment"
-        android:name="com.salton123.compressionplugin.ImageCompressionComp"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        />
+    <!--<fragment-->
+        <!--android:id="@+id/videoFragment"-->
+        <!--android:name="com.salton123.compressionplugin.ImageCompressionComp"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="match_parent"-->
+        <!--/>-->
 </LinearLayout>
